fix gap

--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -353,7 +353,7 @@ svg {
 .empty-cart,
 .empty-list {
   margin: 0;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 .error {
